# my_mouse

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  maze_generator.rb  my_mouse.c  notes.md  read_maze.c
include/: maze_rep.h  read_maze.h
src/: maze_rep.c  my_mouse.c  read_maze.c
